[package]
name = "showie"
version = "1.0.1"
edition = "2021"
authors = [ "talwat" ]
license-file = "LICENSE"
description = "A super simple rust crate to display images to the terminal."
documentation = "https://github.com/talwat/showie"
homepage = "https://github.com/talwat/showie"
repository = "https://github.com/talwat/showie"
readme = "README.md"
exclude = [
    "tests/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "display_benchmark"
harness = false
