[package]
name = "showie"
version = "2.0.1"
edition = "2021"
authors = [ "talwat" ]
license-file = "LICENSE"
description = "A super simple rust crate to display images to the terminal."
documentation = "https://github.com/talwat/showie"
homepage = "https://github.com/talwat/showie"
repository = "https://github.com/talwat/showie"
readme = "README.md"
exclude = [
    "tests/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.8"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "display_benchmark"
harness = false
